# Cleaning-Robot-Simulation

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README-PL.md  README.md  cat.cpp  cat.h  cat_test.cc  furniture.cpp  furniture.h  furniture_generator.cpp  furniture_generator.h  furniture_generator_test.cc  furniture_test.cc  main.cpp  robot.cpp  robot.h  robot_test.cc  room.cpp  room.h  room_info.cpp  room_info.h  room_test.cc  simulation.cpp  simulation.h  visualiser.cpp  visualiser.h
src/: CMakeLists.txt  main.cpp
src/components/: simulation.cpp  simulation.h  visualiser.cpp  visualiser.h
src/models/: furniture_generator.cpp  furniture_generator.h  room.cpp
src/tests/: CMakeLists.txt  cat_test.cc  furniture_generator_test.cc  furniture_test.cc  robot_test.cc  room_test.cc
